--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ main {
 }
 
 .conta,
-.gorjeta {
+.gorjeta,
+.pessoas {
     margin-bottom: 2rem;
 }
 
@@ -106,4 +107,8 @@ main {
 
 .gorjeta #outra::placeholder {
     color: var(--green-300);
+}
+
+.pessoas #erro {
+    display: none;
 }
